[project]
name = "music-downloader"
version = "0.6.0"
description = "A powerful Python script for downloading music from YouTube"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["music", "youtube", "downloader", "mp3", "audio", "batch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities",
]
dependencies = [
    "mutagen>=1.47.0",
    "pydub>=0.25.1",
    "rich>=14.0.0",
    "yt-dlp>=2025.3.31",
]

[project.urls]
"Homepage" = "https://github.com/helioLJ/music-downloader"
"Bug Tracker" = "https://github.com/helioLJ/music-downloader/issues"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
music-downloader = "main:main"
